# TeamC_Landing

./: .gitignore  README.txt
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/osdk-core/: Makefile  cmake_install.cmake  djiosdkTargets.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/osdk-core/AdvancedSensing/: CMakeCache.txt  Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/osdk-core/advanced-sensing-prefix/src/advanced-sensing-stamp/: advanced-sensing-gitclone-lastrun.txt
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/osdk-core/advanced-sensing-prefix/tmp/: advanced-sensing-cfgcmd.txt  advanced-sensing-gitclone.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/advanced-sensing/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/advanced-sensing/camera_stream_callback_sample/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/advanced-sensing/camera_stream_poll_sample/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/advanced-sensing/stereo_vision_depth_perception_sample/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/camera-gimbal/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/flight-control/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/logging/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/mfio/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/missions/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/mobile/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/payload-3rd-party/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/telemetry/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1-build/sample/linux/time-sync/: Makefile  cmake_install.cmake
src/Onboard-SDK-ROS/Onboard-SDK-3.8.1/sample/linux/common/: UserConfig.txt
src/Onboard-SDK-ROS/dji_sdk_demo/src/: demo_flight_control.cpp
src/apriltag_ros/apriltag_ros/config/: tags.yaml
src/apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
src/apriltag_ros/apriltag_ros/scripts/: calibrate_bundle.m
src/dji_m100_gazebo/: CMakeLists.txt  package.xml
src/dji_m100_gazebo/include/: dji_m100_pcsim_gazebo_bridge.h
src/dji_m100_gazebo/launch/: guidance.launch  simulate_dji_m100_gazebo.launch  spawn_dji_m100.launch  start_2.launch
src/dji_m100_gazebo/maps/: map_4_7.yaml
src/dji_m100_gazebo/models/Apriltag36_11_00000/: model.sdf
src/dji_m100_gazebo/src/: dji_m100_pcsim_gazebo_bridge.cpp
src/dji_m100_gazebo/worlds/: map.pgm.yaml  obstacle_aovid.world  straight_line.world
src/dji_m100_landing/: CMakeLists.txt  package.xml
src/dji_m100_landing/include/dji_m100_landing/: landing_controller.h  tag.h
src/dji_m100_landing/launch/: apriltag_track_landing.launch  apriltag_track_landing_pos.launch  odom.launch  position_track.launch  tunning.launch  visualize.launch
src/dji_m100_landing/src/: everything_position_track_velocity_controller.cpp  position_track_velocity_controller.cpp  tag.cpp  track_apriltag_landing_velocity.cpp
src/dji_sdk/include/dji_sdk/: dji_sdk_node.h
src/dji_sdk/launch/: sdk.launch
src/dji_sdk/src/modules/: dji_sdk_node.cpp
src/image_pipeline/image_proc/launch/: raw_to_rec.launch
src/imu_attitude_to_tf/: CMakeLists.txt  package.xml
src/imu_attitude_to_tf/launch/: example.launch  m100.launch
src/imu_attitude_to_tf/src/: imu_attitude_to_tf_node.cpp
src/landing_starter/: CMakeLists.txt  package.xml
src/landing_starter/include/: land_starter.h  landing_starter.h
src/landing_starter/launch/: landing_starter.launch
src/landing_starter/src/: landing_starter.cpp
src/odom/: CMakeLists.txt  package.xml
src/odom/include/: odom.h
src/odom/launch/: odom.launch
src/odom/src/: odom.cpp
src/pid/src/: autotune.cpp
src/rviz_config/: point_cloud_visual.rviz
src/usb_cam/launch/: usb_cam-test.launch
(+4 files in other folders)
