<?xml version="1.0"?>
<package format="2">
  <name>dji_m100_gazebo</name>
  <version>0.0.0</version>
  <description>The dji_m100_gazebo package</description>

  <maintainer email="tahsincankose@gmail.com">Tahsincan Kose</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
<!-- Add by Aaron-->
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>dji_sdk</build_depend>
	<build_depend>tf</build_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>dji_sdk</exec_depend>
	<exec_depend>tf</exec_depend>

  <export>
    <gazebo_ros
          gazebo_model_path="${prefix}/models" />
  </export>
</package>
